# ask-math-oracle-mcp

./: .gitignore  README.md  pyproject.toml
ask_math_oracle_mcp/: server.py
scripts/: one_click_install.sh  one_click_install_claude_code.sh  quickstart.sh  quickstart_claude_code.sh  register_claude_code_mcp.sh  register_codex_mcp.sh  smoke_test.py
