[project]
name = "ask-math-oracle-mcp"
version = "0.1.0"
description = "A lightweight MCP server that queries math-capable LLMs (OpenAI/Gemini) for blocker resolution."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ask-math-oracle-mcp = "ask_math_oracle_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
